welcome.lessons.welcome.loopdowhile.Poucet1.scala.error
Poucet:5: error: not found: value n
    if (n < 3) {
        ^